--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <p>Главная</p>
 <header>
     <nav>
+        <a href="WebStudio" lang="en">WebStudio</a>
     <ul>
-        <li><a href="WebStudio" lang="en">WebStudio</a></li>
         <li><a href="Студия">Студия</a></li>
         <li><a href="Портфолио">Портфолио</a></li>
         <li><a href="Контакты">Контакты</a></li>
@@ -34,27 +34,29 @@
 
     <section>
         <h2 hidden>перечень преимуществ</h2>
-        <div>
-            <h2>Внимание к деталям</h2>
-            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-        </div>
-        <div>
-            <h2>Пунктуальность</h2>
-            <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-        </div>
-        <div>
-            <h2>Планирование</h2>
-            <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-        </div>
-        <div>
-            <h2>Современные технологии</h2>
-            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-        </div>
+        <ul>
+            <li>
+                <h3>Внимание к деталям</h3>
+                <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+            </li>
+            <li>
+                <h3>Пунктуальность</h3>
+                <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+            </li>
+            <li>
+                <h3>Планирование</h3>
+                <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+            </li>
+            <li>
+                <h3>Современные технологии</h3>
+                <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+            </li>           
+        </ul>
     </section>
 
     <section>
         <div>
-            <h3>Чем мы занимаемся</h3>
+            <h2>Чем мы занимаемся</h2>
             <ul> 
                 <li><img src="./images/about/фото1.jpg" alt="программист работает в своем рабочем офисе" width="370" height="294"></li>
                 <li><img src="./images/about/фото2.jpg" alt="вебдизайнер работает над интерфейсом смартфонов" width="370" height="294"></li>
@@ -65,7 +67,7 @@
 
     <section>
         <div>
-            <h3>Наша команда</h3>
+            <h2>Наша команда</h2>
             <ul>
                 <li>
                     <img src="./images/team/игорь.jpg" alt="продакт дизайнер игорь демьяненко" width="270" height="260">
@@ -96,23 +98,20 @@
 </main>
 
 <footer>
-    
+    <a href="WebStudio" lang="en">WebStudio</a>
+    <address>
         <ul>
-            <li><a href="WebStudio" lang="en">WebStudio</a></li>  
             <li>
-                <address><a href="https://goo.gl/maps/Cnqg4gfYeYdehvC88" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
-                </address>
+                <a href="https://goo.gl/maps/Cnqg4gfYeYdehvC88" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
             </li>
             <li>
-                <address><a href="mailto:info@example.com">info@example.com</a>
-                </address>
+                <a href="mailto:info@example.com">info@example.com</a>    
             </li>
             <li>
-                <address><a href="tel:+380961111111">+38 096 111 11 11</a>
-                </address>
+                <a href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
         </ul>
-    
+    </address>            
 </footer>
 </body>
 
