главная стала ссылкой в хедер

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
    
 <body>
-<p>Главная</p>
 <header>
     <nav>
+        <a href="Главная">Главная</a>
         <a href="WebStudio" lang="en">WebStudio</a>
     <ul>
         <li><a href="Студия">Студия</a></li>
