--- a/index.html
+++ b/index.html
@@ -1,128 +1,176 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Вебстудия</title>
-</head>
-   
-<body>
-<header>
-    <nav>
+  </head>
+
+  <body>
+    <header>
+      <nav>
         <a href="Главная">Главная</a>
         <a href="WebStudio" lang="en">WebStudio</a>
-    <ul>
-        <li><a href="Студия">Студия</a></li>
-        <li><a href="Портфолио">Портфолио</a></li>
-        <li><a href="Контакты">Контакты</a></li>
-    </ul>    
-    </nav>
-    <ul>
+        <ul>
+          <li><a href="Студия">Студия</a></li>
+          <li><a href="Портфолио">Портфолио</a></li>
+          <li><a href="Контакты">Контакты</a></li>
+        </ul>
+      </nav>
+      <ul>
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-    </ul>
-</header>
+      </ul>
+    </header>
 
-<main>
-    <section>
+    <main>
+      <section>
         <div>
-            <h1>эффективные решения для вашего бизнеса</h1>
-            <button type="button">Заказать услугу</button>
+          <h1>эффективные решения для вашего бизнеса</h1>
+          <button type="button">Заказать услугу</button>
         </div>
-    </section>
+      </section>
 
-    <section>
+      <section>
         <h2 hidden>перечень преимуществ</h2>
         <ul>
-            <li>
-                <h3>Внимание к деталям</h3>
-                <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-            </li>
-            <li>
-                <h3>Пунктуальность</h3>
-                <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-            </li>
-            <li>
-                <h3>Планирование</h3>
-                <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-            </li>
-            <li>
-                <h3>Современные технологии</h3>
-                <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-            </li>           
+          <li>
+            <h3>Внимание к деталям</h3>
+            <p>
+              Идейные соображения, а также начало повседневной работы по
+              формированию позиции.
+            </p>
+          </li>
+          <li>
+            <h3>Пунктуальность</h3>
+            <p>
+              Задача организации, в особенности же рамки и место обучения кадров
+              влечет за собой.
+            </p>
+          </li>
+          <li>
+            <h3>Планирование</h3>
+            <p>
+              Равным образом консультация с широким активом в значительной
+              степени обуславливает.
+            </p>
+          </li>
+          <li>
+            <h3>Современные технологии</h3>
+            <p>
+              Значимость этих проблем настолько очевидна, что реализация
+              плановых заданий.
+            </p>
+          </li>
         </ul>
-    </section>
+      </section>
 
-    <section>
+      <section>
         <div>
-            <h2>Чем мы занимаемся</h2>
-            <ul> 
-                <li><img src="./images/about/фото1.jpg" alt="программист работает в своем рабочем офисе" width="370" height="294"></li>
-                <li><img src="./images/about/фото2.jpg" alt="вебдизайнер работает над интерфейсом смартфонов" width="370" height="294"></li>
-                <li><img src="./images/about/фото3.jpg" alt="художник веб дизайна работает с графикой выбора цветов на планшете" width="370" height="294"></li>
-            </ul>
+          <h2>Чем мы занимаемся</h2>
+          <ul>
+            <li>
+              <img
+                src="./images/about/photo1.jpg"
+                alt="программист работает в своем рабочем офисе"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/about/photo2.jpg"
+                alt="вебдизайнер работает над интерфейсом смартфонов"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/about/photo3.jpg"
+                alt="художник веб дизайна работает с графикой выбора цветов на планшете"
+                width="370"
+                height="294"
+              />
+            </li>
+          </ul>
         </div>
-    </section>
+      </section>
 
-    <section>
+      <section>
         <div>
-            <h2>Наша команда</h2>
-            <ul>
-                <li>
-                    <img src="./images/team/игорь.jpg" alt="продакт дизайнер игорь демьяненко" width="270" height="260">
-                    <h3>Игорь Демьяненко</h3>
-                    <p lang="en">Product Designer</p> 
-                </li>
+          <h2>Наша команда</h2>
+          <ul>
+            <li>
+              <img
+                src="./images/team/igor.jpg"
+                alt="продакт дизайнер игорь демьяненко"
+                width="270"
+                height="260"
+              />
+              <h3>Игорь Демьяненко</h3>
+              <p lang="en">Product Designer</p>
+            </li>
 
-                <li>
-                    <img src="./images/team/ольга.jpg" alt="фронтенд разработчик ольга репина" width="270" height="260">
-                    <h3>Ольга Репина</h3>
-                    <p lang="en">Frontend Developer</p>
-                </li>
+            <li>
+              <img
+                src="./images/team/olga.jpg"
+                alt="фронтенд разработчик ольга репина"
+                width="270"
+                height="260"
+              />
+              <h3>Ольга Репина</h3>
+              <p lang="en">Frontend Developer</p>
+            </li>
 
-                <li>
-                    <img src="./images/team/николай.jpg" alt="маркетолог николай тарасов" width="270" height="260">
-                    <h3>Николай Тарасов</h3>
-                    <p lang="en">Marketing</p>
-                </li>
+            <li>
+              <img
+                src="./images/team/nikolay.jpg"
+                alt="маркетолог николай тарасов"
+                width="270"
+                height="260"
+              />
+              <h3>Николай Тарасов</h3>
+              <p lang="en">Marketing</p>
+            </li>
 
-                <li>
-                    <img src="./images/team/михаил.jpg" alt="дизайнер интерфейса михаил ермаков" width="270" height="260">
-                    <h3>Михаил Ермаков</h3>
-                    <p lang="en">UI Designer</p>
-                </li>
-            </ul>
+            <li>
+              <img
+                src="./images/team/mihail.jpg"
+                alt="дизайнер интерфейса михаил ермаков"
+                width="270"
+                height="260"
+              />
+              <h3>Михаил Ермаков</h3>
+              <p lang="en">UI Designer</p>
+            </li>
+          </ul>
         </div>
-    </section>
-</main>
+      </section>
+    </main>
 
-<footer>
-    <a href="WebStudio" lang="en">WebStudio</a>
-    <address>
+    <footer>
+      <a href="WebStudio" lang="en">WebStudio</a>
+      <address>
         <ul>
-            <li>
-                <a href="https://goo.gl/maps/Cnqg4gfYeYdehvC88" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
-            </li>
-            <li>
-                <a href="mailto:info@example.com">info@example.com</a>    
-            </li>
-            <li>
-                <a href="tel:+380961111111">+38 096 111 11 11</a>
-            </li>
+          <li>
+            <a
+              href="https://goo.gl/maps/Cnqg4gfYeYdehvC88"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              г. Киев, пр-т Леси Украинки, 26
+            </a>
+          </li>
+          <li>
+            <a href="mailto:info@example.com">info@example.com</a>
+          </li>
+          <li>
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
         </ul>
-    </address>            
-</footer>
-</body>
-
+      </address>
+    </footer>
+  </body>
 </html>
-
-
-    
-
-   
-
-
-
-
-
